fixed TransitionPanel not showing correctly

--- a/ui/css/common.styl
+++ b/ui/css/common.styl
@@ -22,7 +22,7 @@
 	position: relative;
 	> {
 		&.njsTransitionActive {
-			left: 0;
+			left: 0 !important;
 			opacity: 1;
 			display: block;
 			&.njsTransitionLeft {
